# madr_api

./: .env.example  .gitignore  404.html  Dockerfile  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  pipeline.yml
docs/: index.md
github/workflows/: docs.yml
madr/: app.py
madr/database/: get_session.py
madr/models/: __init__.py  account.py  author.py  book.py
madr/routers/: accounts_router.py  auth_routers.py  authors_router.py  books_router.py
madr/schemas/: account_schema.py  author_schema.py  book_schema.py  message_schema.py  page_schema.py  token_schema.py
madr/security/: account_check.py  generate_token.py  password_check.py
madr/settings/: settings.py
madr/utils/: sanitize_data.py
migrations/: env.py
migrations/versions/: 3a9e79f1dd62_include_lazy_selectin.py  96b3398fa0f4_create_books_and_authors_table.py  b409d89f9451_nova_migracao.py  f1a6aca2d83f_create_accounts_table.py
search/: search_index.json
tests/: conftest.py  test_app.py
tests/test_utils/: test_sanitize.py
tests/tests_models/: test_account.py  test_author.py  test_book.py
tests/tests_routers/: test_accounts.py  test_auth.py  test_authors.py  test_books.py
tests/tests_security/: test_generate_token.py
